--- a/08-HTML/homework/styles.css
+++ b/08-HTML/homework/styles.css
@@ -6,7 +6,8 @@ img{
     width: 400px;
 }
 
-#thirdDiv{ 
+#thirdDiv{
+    margin: auto;
     height: 600px;
     width: 500px;
     background-color:lightblue;
@@ -17,4 +18,21 @@ img{
 #spanID{
     font-size: 18px;
     margin: 50px;
+}
+
+body {
+    height: 700px;
+    background-image: url("https://cloudfront-eu-central-1.images.arcpublishing.com/prisaradio/TB2YMLPJABIQTONEJVIVO7S64Y.jpg");
+    background-size: cover;
+    background-repeat:no-repeat;
+    background-position: center center;
+    background-attachment: fixed;
+    background-size: 80rem;
+}
+
+h1,h3,h4{
+    text-align: center;
+}
+.divClass{ 
+    text-align: center;
 }
